feat: comment services

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/throttler": "^5.2.0",
+    "@nestjs/websockets": "^10.3.10",
     "@prisma/client": "^5.11.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
@@ -74,6 +75,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.2",
+    "socket.io": "^4.7.5",
     "throttler": "^0.0.1",
     "timezone": "^1.0.23",
     "utc": "^0.1.0",
